--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+
 }
